force-app/main/default/objects/FEC_Notification_ZNS_Param_Mapping__c/FEC_Notification_ZNS_Param_Mapping__c.object-meta.xml
<CustomObject>
    <label>Notification ZNS Param Mapping</label>
    <nameField>
        <label>Notification ZNS Param Mapping Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Notification ZNS Param Mapping</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>