force-app/main/default/objects/FEC_Notification_ZNS_Param_Mapping__c/fields/Accept_Null__c.field-meta.xml
<CustomField>
    <fullName>Accept_Null__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Accept Null</label>
    <type>Checkbox</type>
</CustomField>