force-app/main/default/objects/FEC_Notification_ZNS_Param_Mapping__c/fields/Format_Function__c.field-meta.xml
<CustomField>
    <fullName>Format_Function__c</fullName>
    <label>Format Function</label>
    <length>255</length>
    <type>Text</type>
</CustomField>