force-app/main/default/objects/FEC_Notification_ZNS_Param_Mapping__c/fields/Min_Length__c.field-meta.xml
<CustomField>
    <fullName>Min_Length__c</fullName>
    <label>Min Length</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>