force-app/main/default/objects/FEC_Notification_ZNS_Param_Mapping__c/fields/Page_Context__c.field-meta.xml
<CustomField>
    <fullName>Page_Context__c</fullName>
    <label>Page Context</label>
    <length>255</length>
    <type>Text</type>
</CustomField>