force-app/main/default/objects/FEC_Notification_ZNS_Param_Mapping__c/fields/Param_Type__c.field-meta.xml
<CustomField>
    <fullName>Param_Type__c</fullName>
    <label>Param Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>