force-app/main/default/objects/FEC_Notification_ZNS_Param_Mapping__c/fields/Require__c.field-meta.xml
<CustomField>
    <fullName>Require__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Require</label>
    <type>Checkbox</type>
</CustomField>